[package]
name = "charon"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
clap = { version = "4.5.20", features = ["derive"] }
http_parse = "2.0.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = "0.12.8"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12"
