[package]
name = "charon"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = "0.12.8"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
